--- a/src/frontend/.env
+++ b/src/frontend/.env
@@ -1,2 +1,4 @@
 REACT_APP_DATA_START_YEAR=2011
 REACT_APP_DATA_END_YEAR=2020
+REACT_APP_ROOT_API_URL=
+# REACT_APP_ROOT_API_URL=http://localhost:8081
